// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist7"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist7"
      placeholder=" "
      popovertarget=":u-datalist7"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        role="option"
        selected
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg person
  </label>
  <ds-suggestion>
    <data
      aria-label="Lars, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="#004"
    >
      Lars
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist4"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist4"
      placeholder=" "
      popovertarget=":u-datalist4"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        label="Lars"
        role="option"
        selected
        tabindex="-1"
        value="#004"
      >
        Lars
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="James"
        role="option"
        tabindex="-1"
        value="#007"
      >
        James
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Nina"
        role="option"
        tabindex="-1"
        value="#113"
      >
        Nina
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Tove"
        role="option"
        tabindex="-1"
        value="#110"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<div style="margin: var(--ds-size-2) 0;">
  Valgt person:
  <pre style="font-size: 14px; white-space: pre-wrap; width: 400px;">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <data
      aria-label="Stavanger, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Stavanger"
    >
      Stavanger
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist3"
      aria-expanded="true"
      aria-label=", Navigate left to find 2 selected​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist3"
      placeholder=" "
      popovertarget=":u-datalist3"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-multiselectable="true"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      id="<removed>"
      popover="manual"
      role="listbox"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-selected="true"
        label="Sogndal"
        role="option"
        selected
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="true"
        label="Stavanger"
        role="option"
        selected
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal, Stavanger
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist2"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist2"
      placeholder=" "
      popovertarget=":u-datalist2"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-multiselectable="false"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      id="<removed>"
      popover="manual"
      role="listbox"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        label="Sogndal"
        role="option"
        selected
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist5"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist5"
      placeholder=" "
      popovertarget=":u-datalist5"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="sogndal"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="oslo"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="brønnøysund"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="stavanger"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="trondheim"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="bergen"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="lillestrøm"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist6"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist6"
      placeholder=" "
      popovertarget=":u-datalist6"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalista"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalista"
      placeholder=" "
      popovertarget=":u-datalista"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        role="option"
        selected
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist8"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist8"
      placeholder=" "
      popovertarget=":u-datalist8"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details data-variant="default">
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          aria-autocomplete="list"
          aria-controls=":u-datalistb"
          aria-expanded="true"
          aria-label="​​​​​"
          autocomplete="off"
          data-label
          id="<removed>"
          list=":u-datalistb"
          placeholder=" "
          popovertarget=":u-datalistb"
          role="combobox"
          type="text"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          aria-multiselectable="false"
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          hidden
          id="<removed>"
          popover="manual"
          role="listbox"
          tabindex="-1"
        >
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Sogndal
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Oslo
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Brønnøysund
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Stavanger
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Trondheim
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Bergen
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist9"
      aria-expanded="true"
      aria-label=", No selected​​​​​"
      autocomplete="off"
      data-label
      form="#"
      id="<removed>"
      list=":u-datalist9"
      placeholder=" "
      popovertarget=":u-datalist9"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="true"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Sogndal"
        role="option"
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":u-datalist1"
      aria-expanded="true"
      aria-label="​​​​​"
      autocomplete="off"
      data-label
      id="<removed>"
      list=":u-datalist1"
      placeholder=" "
      popovertarget=":u-datalist1"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Sogndal"
        role="option"
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
